--- a/Authn_Part2/Authn_Part2_NotWorking.csproj
+++ b/Authn_Part2/Authn_Part2_NotWorking.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>true</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="5.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.0-preview.7.21378.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0-preview.7.21378.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.0-preview.7.21378.6" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AspNet.Security.OAuth.GitHub" Version="6.0.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.3" />
+	</ItemGroup>
 
 </Project>
